# niri-autostart

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: aur.yml  release.yml
aur/niri-autostart/: .SRCINFO  PKGBUILD  PKGBUILD.in
aur/niri-autostart-bin/: .SRCINFO  PKGBUILD  PKGBUILD.in
docs/: IMPLEMENTATION_PLAN.md
examples/: autostart.kdl
scripts/: render-aur-packages.sh  update-aur-packages.sh
src/: config.rs  error.rs  ipc.rs  main.rs  predicate.rs  reconcile.rs  reducer.rs  state.rs
